logs/dataset_runs/mcp_20251005T130939.log
Starting polygon on port 7001
Starting fmp on port 7002
Starting tavily on port 7003
Starting python on port 7004
Starting slack on port 7005
All MCP servers started. Press Ctrl+C to stop.
Python execution failure
Traceback (most recent call last):
  File "/Users/sujitkhanna/Desktop/ongoing_projects/rl_projects/skyrl-mcp-project/src/mcp_tools/python_execution_server.py", line 144, in safe_execute
    result = eval(code, env)  # noqa: S307 - restricted env
             ^^^^^^^^^^^^^^^
  File "<string>", line 1
    inputs = {'quote': '[]', 'recent_volumes': 'None', 'headline': 'None'}
           ^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/Users/sujitkhanna/Desktop/ongoing_projects/rl_projects/skyrl-mcp-project/src/mcp_tools/python_execution_server.py", line 146, in safe_execute
    exec(code, env)  # noqa: S102 - restricted env
    ^^^^^^^^^^^^^^^
  File "<string>", line 3, in <module>
NameError: name 'summarize_nvda_three_bullets' is not defined
